# poordeepseekv4

./: .gitignore  README.md  config.py  data.py  generate.py  main.py  model.py  modules.py  muon_optimizer.py  pyproject.toml  test.py  train.py  train_tokenizer.py
tools/: config.json
