[project]
name = "deepseekv4poor"
version = "0.1.0"
description = "Mini DeepSeek-V4 replication for learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "torchvision",
    "tokenizers>=0.15.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "tqdm",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
